# oi

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  justfile  make.just
.github/workflows/: ci.yml  docs.yml
examples/: fn.oi  hello.oi  main.oi
public/: index.html
ref/: Oi.md  Polly.md  Vex.md  archive.md  lab.md  syntax.md
src/: ast.rs  cli.rs  compiler.rs  diagnostics.rs  driver.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs
src/commands/: exec.rs  mod.rs  repl.rs  run.rs  serve.rs
src/compiler/: lower.rs  mod.rs
src/compiler/lower/: anon.rs  array.rs  builtin.rs  call.rs  control.rs  core.rs  expr.rs  generic.rs  helpers.rs  mod.rs  op.rs  print.rs  stmt.rs  value.rs
tests/: run.rs
tests/cases/: fn_vars.oi  multi_fn.oi  stmts.oi
tests/cli/: exec.rs  main.rs  run.rs  serve.rs
tests/compiler/: anon_fn.rs  arithmetic.rs  arrays.rs  assertions.rs  atoms.rs  booleans.rs  comments.rs  comparisons.rs  control_flow.rs  diagnostics.rs  dollar.rs  examples.rs  exec.rs  functions.rs  helpers.rs  io.rs  literals.rs  loops.rs  main.rs  match_.rs  methods.rs  numbers.rs  pipelines.rs  statements.rs  strings.rs  structs.rs  tuples.rs  unit.rs  vars.rs
tests/compiler/control/: loops.rs  match_.rs  mod.rs  or_else.rs  propagators.rs
tests/compiler/types/: aliases.rs  arrays.rs  atoms.rs  enums.rs  generic_methods.rs  generics.rs  maps.rs  mod.rs  options.rs  results.rs  structs.rs  (+1 more)
tests/support/: mod.rs
www/: config.toml  zola.toml
www/content/: _index.md  about.md  features.md
www/templates/: base.html  index.html
(+4 files in other folders)
